Adds first test + a lint warning